<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/label_location_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/location_info"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_info_label_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/label_longitude"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_location_info" />

    <TextView
        android:id="@+id/location_info_text_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_Lorem_ipsum"
        app:layout_constraintStart_toEndOf="@id/location_info_label_lng"
        app:layout_constraintTop_toTopOf="@id/location_info_label_lng" />

    <TextView
        android:id="@+id/location_info_label_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_latitude"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_info_label_lng" />

    <TextView
        android:id="@+id/location_info_text_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_Lorem_ipsum"
        app:layout_constraintStart_toEndOf="@id/location_info_label_lat"
        app:layout_constraintTop_toTopOf="@id/location_info_label_lat" />

    <TextView
        android:id="@+id/location_info_label_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_country"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_info_label_lat" />

    <TextView
        android:id="@+id/location_info_text_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_Lorem_ipsum"
        app:layout_constraintStart_toEndOf="@id/location_info_label_country"
        app:layout_constraintTop_toTopOf="@id/location_info_label_country" />

    <TextView
        android:id="@+id/location_info_label_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_city"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_info_label_country" />

    <TextView
        android:id="@+id/location_info_text_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_Lorem_ipsum"
        app:layout_constraintStart_toEndOf="@id/location_info_label_city"
        app:layout_constraintTop_toTopOf="@id/location_info_label_city" />


</androidx.constraintlayout.widget.ConstraintLayout>