<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_enter_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/enter_duration"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edit_text_seconds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_seconds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@drawable/bg_rounded_grey_color"
        android:hint="@string/hint_default_0"
        android:inputType="number"
        android:padding="12dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/text_enter_duration"
        app:layout_constraintEnd_toStartOf="@id/text_seconds"
        app:layout_constraintStart_toEndOf="@id/text_enter_duration"
        app:layout_constraintTop_toTopOf="@id/text_enter_duration" />

    <TextView
        android:id="@+id/text_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/seconds"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text_seconds"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>